// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CouponForm should render a coupon even if no known benefitType is supplied 1`] = `
<div>
  <form
    class="d-flex align-items-center mb-3"
  >
    <span
      class="text-muted"
    >
      Coupon COUPONCODE applied
    </span>
    <button
      class="display-inline p-0 pl-3 border-0 btn btn-link"
      type="submit"
    >
      Remove
    </button>
  </form>
</div>
`;

exports[`CouponForm should render a form when there is no coupon 1`] = `
<div>
  <form
    class="summary-row d-flex align-items-end"
  >
    <div
      class="pgn__form-group mb-0 mr-2"
      invalid="false"
    >
      <label
        class="h6 d-block"
        for="couponField"
      >
        Add coupon code (optional)
      </label>
      <div
        class="pgn__form-control-decorator-group"
      >
        <input
          class="form-control"
          data-testid="couponField"
          id="couponField"
          name="couponField"
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      class="btn btn-outline-primary"
      type="submit"
    >
      Apply
    </button>
  </form>
</div>
`;

exports[`CouponForm should render a percentage value coupon 1`] = `
<div>
  <form
    class="d-flex align-items-center mb-3"
  >
    <span
      class="text-muted"
    >
      Coupon COUPONCODE applied for 10% off
    </span>
    <button
      class="display-inline p-0 pl-3 border-0 btn btn-link"
      type="submit"
    >
      Remove
    </button>
  </form>
</div>
`;

exports[`CouponForm should render an absolute value coupon 1`] = `
<div>
  <form
    class="d-flex align-items-center mb-3"
  >
    <span
      class="text-muted"
    >
      Coupon COUPONCODE applied for 
      $10.00
       off
    </span>
    <button
      class="display-inline p-0 pl-3 border-0 btn btn-link"
      type="submit"
    >
      Remove
    </button>
  </form>
</div>
`;
